# projects

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  package.yml  rust.yml  test.yml
src/: main.rs  projects.rs  schema.rs  updater.rs  webserver.rs
static/: style.css
templates/: base.html  index.html
