[package]
name = "khonsulabs-projects"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
structopt = "0.3"
axum = "0.4"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls-native-roots",
    "json",
] }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb.git", branch = "main", features = [
    "local",
    "local-instrument",
    "local-encryption",
    "json",
    "keystorage-s3",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
dotenv = "0.15"
tera = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
tower-http = { version = "0.2", features = ["fs"] }
once_cell = "1"

# [patch.crates-io]
# pot = { path = "../pot/pot", version = "0.1.0-alpha.2" }
# nebari = { path = "../nebari/nebari", version = "0.1.0-rc.4" }

# [patch."https://github.com/khonsulabs/bonsaidb.git"]
# bonsaidb = { path = "../bonsaidb/crates/bonsaidb" }
