[package]
name = "khonsulabs-projects"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
structopt = "0.3.26"
axum = "0.4.5"
reqwest = { version = "0.11.9", default-features = false, features = [
    "rustls-tls-native-roots",
    "json",
] }
tokio = { version = "1.16.1", features = ["full"] }
anyhow = { version = "1.0.53", features = ["backtrace"] }
bonsaidb = { version = "0.1.0", features = [
    "local",
    "local-instrument",
    "local-encryption",
    "keystorage-s3",
] }
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
serde = { version = "1.0.136", features = ["derive"] }
transmog-json = "0.1.0"
async-trait = "0.1.52"
dotenv = "0.15.0"
tera = "1.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
http = "0.2.6"
tower-http = { version = "0.2.1", features = ["fs"] }
once_cell = "1.9.0"

# [patch.crates-io]
# pot = { path = "../pot/pot", version = "0.1.0-alpha.2" }
# nebari = { path = "../nebari/nebari", version = "0.1.0-rc.4" }

# [patch."https://github.com/khonsulabs/bonsaidb.git"]
# bonsaidb = { path = "../bonsaidb/crates/bonsaidb" }
